crates/tui/snapshots/fullscreen/pointer/fullscreen_selection_copied.snap
---
source: crates/tui/src/app/fullscreen/pointer_tests.rs
expression: text
---
  .                                            [Dashboard]  
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                               Copied 7 chars to clipboard  
  ────────────────────────────────────────────────────────  
  > copy me                                                 
  ─────────────────────────────────────── Automatic model   
                                                            
  ⏸ Manual
