crates/tui/snapshots/fullscreen/pointer/fullscreen_selection_copy_failed.snap
---
source: crates/tui/src/app/fullscreen/pointer_tests.rs
expression: text
---
  .                                            [Dashboard]  
                                                            
● clipboard unavailable                                     
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
  ────────────────────────────────────────────────────────  
  > copy me                                                 
  ─────────────────────────────────────── Automatic model   
                                                            
  ⏸ Manual
