crates/tui/snapshots/fullscreen/pointer/input_pointer_selection.snap
---
source: crates/tui/src/app/fullscreen/pointer_tests.rs
expression: text
---
  .                                            [Dashboard]  
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
  ────────────────────────────────────────────────────────  
  > ab你 cd                                                  
  ─────────────────────────────────────── Automatic model   
                                                            
  ⏸ Manual
